updated dir structure

--- a/.env
+++ b/.env
@@ -3,8 +3,11 @@ LANGCHAIN_API_KEY="ls__abcsdefe97444c6a3749a63f696d9a9"
 OPENAI_API_KEY="sk-cddgC6cg0uEZuUT3BlbkFJaIYws3PyQmBLQor3trHI"
 LANGCHAIN_PROJECT="Langchain_Trail_V1"
 GROQ_API_KEY="gsk_UasdjcxFGpSuSavNWGdyb3FYFd5MGUQWZjn7MOt5JSMLYa3F"
+GEMINI_API_KEY="AIzaSyCoNS62Tsn0b1bBcpTg1KOqA4OAEMp50IM"
 '''
-#Updated dummy keys for ref so no use of trying these keys
+# Updated dummy keys for ref so no use of trying these keys
 
-#Generate keys from respective websites
-#for Groq --> https://console.groq.com/keys
+# Generate keys from respective websites
+# for Groq API --> https://console.groq.com/keys
+
+# for Gemini API --> https://aistudio.google.com/app/apikey
