--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,10 @@
-langchain_openai
+langchain-core
+langchain-community
 langchain_groq
-langchain_core
-python-dotenv
-streamlit
-langchain_community
-langserve
-fastapi
-uvicorn
-sse_starlette
-bs4
-pypdf
-chromadb
+sentence-transformers
 faiss-cpu
-onnxruntime
-arxiv
-groq
-cassio
-beautifulsoup4
-langchain-groq
-wikipedia
-arxiv
-langchainhub
-sentence_transformers
-nltk
-gensim
-openpyxl
-transformers
-spacy
-en-core-web-sm==3.0.0
-flask
-dagshub
-lightgbm
+langchain_google_genai
+langchain_openai
+langchain_anthropic
+langchain_huggingface
+google-generativeai
